3528.	[func]		New "dnssec-coverage" command scans the timing
			metadata for a set of DNSSEC keys and reports if a
			lapse in signing coverage has been scheduled
			inadvertently. (Note: This tool depends on python;
			it will not be built or installed on systems that
			do not have a python interpreter.) [RT #28098]

3527.	[compat]	Add a URI to allow applications to explicitly
			request a particular XML schema from the statistics
			channel, returning 404 if not supported. [RT #32481]

3526.	[cleanup]	Set up dependencies for unit tests correctly during
			build. [RT #32803]

3521.	[bug]		Address memory leak in opensslecdsa_link.c. [RT #32249]

3520.	[bug]		'mctx' was not being referenced counted in some places
			where it should have been.  [RT #32794]

	--- 9.9.3b2 released ---
	
3517.	[bug]		Reorder destruction to avoid shutdown race. [RT #32777]

3515.	[port]		'%T' is not portable in strftime(). [RT #32763]

3514.	[bug]		The ranges for valid key sizes in ddns-confgen and
			rndc-confgen were too constrained. Keys up to 512
			bits are now allowed for most algorithms, and up
			to 1024 bits for hmac-sha384 and hmac-sha512.
			[RT #32753]

3511.	[doc]		Improve documentation of redirect zones. [RT #32756]

3509.	[cleanup]	Added a product line to version file to allow for
			easy naming of different products (BIND
			vs BIND ESV, for example). [RT #32755]

3508.	[contrib]	queryperf was incorrectly rejecting the -T option.
			[RT #32338]

3507.	[bug]		Statistics channel XSL (when built with
			--enable-newstats) had a glitch when attempting
			to chart query data before any queries had been
			received. [RT #32620]

3505.	[bug]		When setting "max-cache-size" and "max-acache-size",
			larger values than 4 gigabytes could not be set
			explicitly, though larger sizes were available
			when setting cache size to 0. This has been
			corrected; the full range is now available.
			[RT #32358]

3503.	[doc]		Clarify size_spec syntax. [RT #32449]
